--- a/rojamahorse.cosmoteer-modern-rules-1.0/package.json
+++ b/rojamahorse.cosmoteer-modern-rules-1.0/package.json
@@ -4,7 +4,7 @@
 	"icon": "icon.png",
 	"repository": {
 		"type": "git",
-		"url": "https://store.steampowered.com/app/799600/Cosmoteer_Starship_Architect__Commander/"
+		"url": "https://github.com/Rojamahorse/vscode4cosmoteer/tree/main/rojamahorse.cosmoteer-modern-rules-1.0/"
 	},
 	"displayName": "Cosmoteer-Modern-Rules",
 	"description": "Language support for the Cosmoteer .rules file.",
